<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkmain"
    android:id="@+id/appdetail_fragment" >
    <RelativeLayout
        android:descendantFocusability="afterDescendants"
        android:background="@drawable/title_bar_bg"
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_gravity="top">
        <ImageButton
            android:id="@+id/iv_back"
            android:background="@drawable/iv_back_selector"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="应用商城"
            android:textSize="30sp"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_toRightOf="@id/iv_back"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_logo"
            android:background="@drawable/logo"
            android:layout_marginRight="20dp"
            android:text="下载管理"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/bt_downLoad_manager"
            android:layout_width="wrap_content"
            android:background="@drawable/text_selector"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_logo"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textSize="25sp"
            android:text="下载管理"
            android:textColor="@color/blue"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="160dp"
        android:layout_height="165dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_launcher"/>

    <Button
        android:id="@+id/btn_download"
        style="@style/Widget.Button"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:layout_below="@id/mainImage"
        android:layout_marginLeft="70dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:onClick="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/title_bar_onclick_button"
        android:progressDrawable="@drawable/progress_1"
        android:gravity="center"
        android:text="@string/btn_download" >
    </Button>
    <!-- android:background="@drawable/border_img_selector" -->

    <TextView
        android:id="@+id/appName"
        style="@style/TextAppearance.Title.Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/mainImage"
        android:textColor="#043b8c"
        android:textSize="34sp" />


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="890dp"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/company"
        android:layout_below="@+id/company"

        android:layout_marginTop="5dp" >
        <!--android:background="@drawable/default_selector"-->
        <ScrollView
           android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"

            android:background="@drawable/text_selector"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/appDetails"

                    style="@style/TextAppearance.Title.Bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text=""
                    android:textSize="25sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
        <LinearLayout
            android:id="@+id/relatedapplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@+id/relativeLayout1"
            android:layout_below="@+id/relativeLayout1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView1"
                style="@style/TextAppearance.Title.Bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/relativeLayout1"
                android:layout_below="@+id/relativeLayout1"
                android:text="@string/app_detail_relevance"
                android:textColor="#043b8c"
                android:textSize="23sp" />
            <GridView
                android:id="@+id/relatedList"
                android:layout_width="835dip"
                android:layout_marginTop="1dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView1"
                android:layout_toRightOf="@+id/textView1"
                android:descendantFocusability="afterDescendants"
                android:drawSelectorOnTop="false"
                android:focusable="true"
                android:listSelector="@drawable/border_img_selector"
                android:numColumns="4" >
            </GridView>
        </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.Title.Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relatedapplication"
        android:layout_below="@+id/relatedapplication"
        android:text="@string/app_detail_screenshot"
        android:textColor="#043b8c"
        android:textSize="23sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="2dp" >

        <HorizontalScrollView
            android:id="@+id/hsv"
            android:layout_width="890dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/linearbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/imagesList"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="afterDescendants"
                    android:drawSelectorOnTop="false"
                    android:focusable="true"
                    android:listSelector="@drawable/border_img_selector" >
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_zfb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btn_download"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="25dp"
        android:background="@drawable/border_img_selector"
        android:padding="5dip"
        android:scaleType="fitXY"
        android:src="@drawable/msp_icon"
        android:visibility="gone" />

    <TextView
        android:id="@+id/company"
        style="@style/TextAppearance.List.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/mainImage"
         />

    <TextView
        android:id="@+id/appType"
        style="@style/TextAppearance.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingbarDefault"
        android:layout_marginLeft="37dp"
        android:layout_toRightOf="@+id/appName"
        android:textColor="#ff8a00"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingbarDefault"
        style="@style/scoreRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="15.0dip"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="33dp"
        android:layout_toRightOf="@+id/appName"
        android:numStars="5"
        android:stepSize="0.5" />

    <ProgressBar
        android:id="@+id/downpb"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="14.0dip"
        android:layout_alignLeft="@+id/btn_download"
        android:layout_alignRight="@+id/btn_download"
        android:layout_below="@+id/mainImage"
        android:focusable="false"
        android:max="100"
        android:backgroundTint="@drawable/progress_1"
        android:background="@drawable/progressbar_style"
        android:singleLine="true" />


        <LinearLayout

            android:orientation="vertical"
            android:id="@+id/loading"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:descendantFocusability="afterDescendants"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>